# Cleave

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  environment.template  main.py  package.json  pyproject.toml  run.sh  start.md
.bmad-core/: install-manifest.yml
agents/: README.md  ba-agent.md  dev-agent.md  fix-agent.md  merge-agent.md  pm-agent.md  pr-comment-responder-agent.md  project-setup-agent.md  qa-agent.md  scope-guard-agent.md
checklists/: dev-scope-checklist.md  merge-checklist.md  qa-checklist.md  requirements-checklist.md  scope-guard-checklist.md
config/: config_loader.py  resource_registry.py  schemas.py
config-live/: global.yaml
config-live.example/: global.yaml
dashboard/: actions.py  atlas_runner.py  env_writer.py  event_store.py  events.py  project_create.py  project_create_payload.py  settings_store.py  setup_workspace.py  web.py
data/: coding-standards.md
deploy/: README.md  cleave.service  environment.template  setup.sh  sickle.service
docs/: README.md  agent-contracts.md  architecture-v2.md  architecture.md  cleanup-plan.md  dashboard.md  implementation-plan-v2.md  labels.md  multi-stack-readiness.md  prd.md  project-brief.md  setup-guide.md  telegram.md  troubleshooting.md
health/: __init__.py  runner.py  validators.py
orchestrator/: agent_runtime.py  approval_gate.py  comment_classifier.py  constants.py  escalation.py  escalation_view.py  git_ops.py  gradle_remediation.py  ingest.py  merge_step.py  model_resolver.py  notify.py  orchestrator.py  pr_creation.py  resolution_report.py  runtime.py  safeguards.py  (+6 more)
(+253 files in other folders)
